fix(re-select): fix spacing for mobile & tel fixes

--- a/assets/style/components/_bde-theme.scss
+++ b/assets/style/components/_bde-theme.scss
@@ -86,6 +86,10 @@ $tertiary: #959CA0;
         @apply rounded-[30px];
         padding-left: 10px !important;
 
+        &.re-field-frame-select {
+            padding-left: 0 !important;
+        }
+
         &:focus,
         &.focus,
         &:active,
@@ -153,4 +157,8 @@ $tertiary: #959CA0;
         color: black !important;
         font-size: 16px !important;
     }
+}
+
+.re-phone .re-field-frame {
+    padding-left: 0 !important;
 }
